--- a/src/components/DropboxFileSelector/DropboxFileSelector.scss
+++ b/src/components/DropboxFileSelector/DropboxFileSelector.scss
@@ -5,4 +5,9 @@
   justify-content: center;
   align-items: center;
   padding: 50px;
+  img {
+    width: 100px;
+    height: 100px;
+    margin: 30px;
+  }
 }
