--- a/src/components/GoogleFileSelector/GoogleFileSelector.scss
+++ b/src/components/GoogleFileSelector/GoogleFileSelector.scss
@@ -1,9 +1,13 @@
 .GoogleFileSelector-container {
-    width: 100%;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    padding: 50px;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  padding: 50px;
+  img {
+    width: 100px;
+    height: 100px;
+    margin: 30px;
   }
-  
+}
