--- a/src/components/ShowUploaded/ShowUploaded.scss
+++ b/src/components/ShowUploaded/ShowUploaded.scss
@@ -1,13 +1,25 @@
 $color-gray: #98a2b3;
+$color-progress: #f2f4f7;
 .show-uploaded-image-size {
-  height: 96px;
+  height: 100%;
   width: 96px;
+  object-fit: fill;
+  border-top-left-radius: 10px;
+  border-bottom-left-radius: 10px;
+}
+.show-uploaded-progressImage-size {
+  height: 50%;
+  width: 96px;
+  object-fit: contain;
+  border-top-left-radius: 10px;
+  border-bottom-left-radius: 10px;
 }
 .show-uploaded-font-fit {
   overflow-wrap: break-word;
 }
 .show-uploaded-container {
   width: 100%;
+  height: 100px;
   display: flex;
   flex-direction: row;
   justify-content: space-between;
@@ -17,17 +29,31 @@ $color-gray: #98a2b3;
 }
 .show-uploaded-main-container {
   width: 100%;
+  height: 100%;
   display: flex;
   flex-direction: column;
   align-items: flex-start;
   justify-content: flex-start;
+  padding: 10px;
+  h4 {
+    color: $color-gray;
+  }
+}
+.show-uploaded-noImage-Container {
+  width: 100%;
+  text-align: center;
+  p {
+    font-size: 18px;
+    color: $color-gray;
+  }
 }
 .show-uploaded-badge {
   height: 25px;
   width: 25px;
 }
 .show-uploaded-name-box {
-  padding: 10px;
+  padding-bottom: 10px;
+  padding-top: 10px;
   width: 100%;
   display: flex;
   justify-content: space-between;
@@ -35,9 +61,49 @@ $color-gray: #98a2b3;
 }
 .show-uploaded-box {
   width: 100%;
+  padding-left: 10px;
+  padding-right: 10px;
 }
 .show-uploaded-close {
   font-size: 20px;
-  color: #98a2b3;
+  color: $color-gray;
   cursor: pointer;
+}
+.show-uploaded-progressBar {
+  background-color: $color-progress;
+  border-radius: 4px;
+}
+.show-uploaded-noImage {
+  background-color: $color-progress;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-top-left-radius: 10px;
+  border-bottom-left-radius: 10px;
+}
+.show-uploaded-scrolling {
+  width: 100%;
+  overflow-y: scroll;
+}
+
+/* width */
+::-webkit-scrollbar {
+  width: 8px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+  box-shadow: inset 0 0 5px $color-progress;
+  border-radius: 4px;
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background: $color-gray;
+  border-radius: 4px;
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+  background: #494848;
 }
