--- a/src/components/UploadTypes/UploadTypes.scss
+++ b/src/components/UploadTypes/UploadTypes.scss
@@ -1,12 +1,19 @@
 $color-background-1: #f1fff8;
-.upload-type-image-size {
-  height: 86px;
-  width: 86px;
-}
 %upload-type-custom-button {
   width: 100%;
+
   text-align: center;
   cursor: pointer;
+  padding: 20px;
+}
+.upload-type-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+.upload-type-image-size {
+  height: 40px;
+  width: 40px;
 }
 .upload-type-background-color {
   @extend %upload-type-custom-button;
